--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,7 @@ falcon~=2.0.0
 jsonschema~=3.2.0
 marshmallow~=3.12.1
 apispec~=4.4.1
-glom=20.11.0
+glom~=20.11.0
 kaitaistruct~=0.9
 zstandard~=0.15.1
 publicsuffix2~=2.20191221
