--- a/web/package.json
+++ b/web/package.json
@@ -24,21 +24,21 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "classnames": "^2.2.5",
-    "lodash": "^4.17.4",
+    "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "mock-xmlhttprequest": "^1.1.0",
-    "prop-types": "^15.6.0",
-    "react": "16.0.0",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
     "react-codemirror": "^1.0.0",
-    "react-dom": "16.0.0",
-    "react-redux": "^5.0.6",
-    "react-test-renderer": "16.0.0",
-    "redux": "^3.7.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "7.1.0",
+    "react-test-renderer": "^17.0.2",
+    "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
-    "redux-mock-store": "^1.3.0",
-    "redux-thunk": "^2.2.0",
-    "shallowequal": "^1.0.2",
-    "stable": "^0.1.6"
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
+    "shallowequal": "^1.1.0",
+    "stable": "^0.1.8"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
