--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,7 @@
   "name": "mitmproxy",
   "private": true,
   "scripts": {
-    "test": "TZ=UTC jest --coverage",
+    "test": "jest --coverage",
     "build": "gulp prod",
     "start": "gulp"
   },
@@ -31,7 +31,7 @@
     "react": "^17.0.2",
     "react-codemirror": "^1.0.0",
     "react-dom": "^17.0.2",
-    "react-redux": "7.1.0",
+    "react-redux": "^7.2.4",
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
