--- a/web/package.json
+++ b/web/package.json
@@ -7,14 +7,17 @@
         "start": "gulp"
     },
     "dependencies": {
+        "@popperjs/core": "^2.9.2",
         "bootstrap": "^3.3.7",
         "classnames": "^2.3.1",
         "lodash": "^4.17.21",
         "mock-xmlhttprequest": "^1.1.0",
+        "popper.js": "^1.16.1",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-codemirror": "^1.0.0",
         "react-dom": "^17.0.2",
+        "react-popper": "^2.2.5",
         "react-redux": "^7.2.4",
         "react-test-renderer": "^17.0.2",
         "redux": "^4.1.0",
