--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,14 @@ commands =
   python ./test/filename_matching.py
 
 [testenv:mypy]
-deps = mypy==0.902
+deps =
+  mypy==0.902
+  types-certifi==0.1.3
+  types-Flask==1.1.0
+  types-Werkzeug==1.0.1
+  types-requests==0.1.11
+  types-cryptography==3.3.2
+
 commands =
   mypy {posargs}
   
