--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -196,6 +196,12 @@ jobs:
         with:
           name: binaries.linux
           path: release/dist
+      - uses: docker/setup-buildx-action@v1
+        id: buildx
+        with:
+          install: true
+      - name: Available platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
       - run: pip install -e .[dev]
       - run: python release/cibuild.py build
       - run: python release/cibuild.py upload
