--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -178,13 +178,18 @@ jobs:
 
   # Separate from everything else because slow.
   build-and-deploy-docker:
+    if: github.repository == 'mitmproxy/mitmproxy' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dockertest')
+    environment: deploy-docker
     needs:
+     - test
+     - test-web-ui
      - build
+     - docs
     runs-on: ubuntu-latest
     env:
       CI_BUILD_DOCKER: 1
       DOCKER_USERNAME: mitmbot
-      DOCKER_PASSWORD: test
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -196,11 +201,8 @@ jobs:
         with:
           name: binaries.linux
           path: release/dist
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - uses: docker/setup-buildx-action@v1
-        with:
-          install: true
+      - uses: docker/setup-qemu-action@27d0a4f181a40b142cce983c5393082c365d1480
+      - uses: docker/setup-buildx-action@b1f1f719c7cd5364be7c82e366366da322d01f7c
       - run: pip install -e .[dev]
       - run: python release/cibuild.py build
       - run: python release/cibuild.py upload
