--- a/release/docker/Dockerfile
+++ b/release/docker/Dockerfile
@@ -1,5 +1,9 @@
 FROM python:3.9-buster as wheelbuilder
 
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends build-essential libssl-dev libffi-dev python3-dev cargo \
+    && rm -rf /var/lib/apt/lists/*
+
 ARG MITMPROXY_WHEEL
 COPY $MITMPROXY_WHEEL /wheels/
 RUN pip install wheel && pip wheel --wheel-dir /wheels /wheels/${MITMPROXY_WHEEL}
