drop armv6/armv7

--- a/release/docker/Dockerfile
+++ b/release/docker/Dockerfile
@@ -1,9 +1,5 @@
 FROM python:3.9-buster as wheelbuilder
 
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends build-essential libssl-dev libffi-dev python3-dev cargo \
-    && rm -rf /var/lib/apt/lists/*
-
 ARG MITMPROXY_WHEEL
 COPY $MITMPROXY_WHEEL /wheels/
 RUN pip install wheel && pip wheel --wheel-dir /wheels /wheels/${MITMPROXY_WHEEL}
@@ -16,7 +12,7 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/*
 
 COPY --from=wheelbuilder /wheels /wheels
-RUN pip install --no-cache-dir --no-index --find-links=/wheels mitmproxy
+RUN pip install --no-index --find-links=/wheels mitmproxy
 RUN rm -rf /wheels
 
 VOLUME /home/mitmproxy/.mitmproxy
