--- a/release/docker/Dockerfile
+++ b/release/docker/Dockerfile
@@ -1,15 +1,19 @@
-FROM python:3.9-slim-buster
+FROM python:3.9-buster as wheelbuilder
 
 ARG MITMPROXY_WHEEL
+COPY $MITMPROXY_WHEEL /wheels/
+RUN pip install wheel && pip wheel --wheel-dir /wheels /wheels/${MITMPROXY_WHEEL}
+
+FROM python:3.9-slim-buster
 
 RUN useradd -mU mitmproxy
 RUN apt-get update \
     && apt-get install -y --no-install-recommends gosu \
     && rm -rf /var/lib/apt/lists/*
 
-COPY $MITMPROXY_WHEEL /home/mitmproxy/
-RUN pip3 install --no-cache-dir -U /home/mitmproxy/${MITMPROXY_WHEEL} \
-    && rm -rf /home/mitmproxy/${MITMPROXY_WHEEL}
+COPY --from=wheelbuilder /wheels /wheels
+RUN pip install --no-index --find-links=/wheels mitmproxy
+RUN rm -rf /wheels
 
 VOLUME /home/mitmproxy/.mitmproxy
 
