--- a/tox.ini
+++ b/tox.ini
@@ -29,12 +29,13 @@ commands =
 
 [testenv:mypy]
 deps =
-  mypy==0.902
+  mypy==0.910
   types-certifi==0.1.4
   types-Flask==1.1.1
   types-Werkzeug==1.0.2
   types-requests==2.25.0
   types-cryptography==3.3.3
+  types-pyOpenSSL==20.0.3
 
 commands =
   mypy {posargs}
