--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,10 @@
         "stable": "^0.1.8"
     },
     "devDependencies": {
+        "@testing-library/dom": "^8.1.0",
+        "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
+        "@testing-library/user-event": "^13.2.1",
         "@types/jest": "^26.0.23",
         "@types/redux-mock-store": "^1.0.2",
         "esbuild": "^0.12.9",
