--- a/clients/config-python.yaml
+++ b/clients/config-python.yaml
@@ -1,6 +1,6 @@
-moduleName: "browserup_proxy_client"
+moduleName: "browserup_mitmproxy_client"
 appDescription: "BrowserUp Proxy Client"
 
 # Python
 #packageName: "browserup-proxy"
-#projectName: "browserup-proxy-client"
+#projectName: "browserup-mitmproxy-client"
