--- a/java/pom.xml
+++ b/java/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.browserup</groupId>
-    <artifactId>browserup-proxy-client</artifactId>
+    <artifactId>browserup-mitmproxy-client</artifactId>
     <packaging>jar</packaging>
-    <name>browserup-proxy-client</name>
+    <name>browserup-mitmproxy-client</name>
     <version>1.0.0</version>
     <url>https://github.com/openapitools/openapi-generator</url>
-    <description>browserup-proxy-client</description>
+    <description>browserup-mitmproxy-client</description>
     <scm>
         <connection>scm:git:git@github.com:openapitools/openapi-generator.git</connection>
         <developerConnection>scm:git:git@github.com:openapitools/openapi-generator.git</developerConnection>
@@ -247,11 +247,6 @@
             <version>${commons-lang3-version}</version>
         </dependency>
         <dependency>
-            <groupId>org.threeten</groupId>
-            <artifactId>threetenbp</artifactId>
-            <version>${threetenbp-version}</version>
-        </dependency>
-        <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>${javax-annotation-version}</version>
@@ -266,7 +261,7 @@
         </dependency>
     </dependencies>
     <properties>
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <gson-fire-version>1.8.5</gson-fire-version>
@@ -274,7 +269,6 @@
         <okhttp-version>4.9.1</okhttp-version>
         <gson-version>2.8.6</gson-version>
         <commons-lang3-version>3.11</commons-lang3-version>
-        <threetenbp-version>1.5.0</threetenbp-version>
         <javax-annotation-version>1.3.2</javax-annotation-version>
         <junit-version>4.13.1</junit-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
