--- a/clients/config-java.yaml
+++ b/clients/config-java.yaml
@@ -10,7 +10,7 @@ artifactId: browserup-mitmproxy-client
 # artifactUrl
 
 # artifact version in generated pom.xml. This also becomes part of the generated library's filename (Default: 1.0.0)
-# artifactVersion
+artifactVersion: 1.0.0-SNAPSHOT
 
 #  package for generated models (Default: org.openapitools.client.model)
 modelPackage: com.browserup.proxy-client
