Publish on successful CI build; Fix for negative wait

--- a/.github/workflows/publish-java-client.yml
+++ b/.github/workflows/publish-java-client.yml
@@ -1,8 +1,10 @@
 name: Publish Java Client
 
 on:
-  push:
-    branches: [ main ]
+  workflow_run:
+    workflows: ["CI"]
+    types:
+      - completed
 
 jobs:
   build:
