Python client version update; Re-generated clients

--- a/clients/config-java.yaml
+++ b/clients/config-java.yaml
@@ -66,5 +66,7 @@ licenseName: MIT
 #    microprofileFramework
 #    Framework for microprofile. Possible values "kumuluzee"
 
+templateDir: java-overlay
+
 
 
