Publish clients on release only

--- a/.github/workflows/publish-python-client.yml
+++ b/.github/workflows/publish-python-client.yml
@@ -1,10 +1,6 @@
 name: Publish Python Client
 
-on:
-  workflow_run:
-    workflows: ["CI"]
-    types:
-      - completed
+on: release
 
 jobs:
   build:
