--- a/.github/workflows/publish-js-client.yml
+++ b/.github/workflows/publish-js-client.yml
@@ -1,10 +1,6 @@
 name: Publish JS Client
 
-on:
-  workflow_run:
-    workflows: ["CI"]
-    types:
-      - completed
+on: release
 
 jobs:
   publish:
