--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -245,6 +245,8 @@ jobs:
       - run: ./release/deploy.py
 
   deployBinaries:
+    needs:
+      - build
     runs-on: ubuntu-latest
     steps:
       - uses: jakejarvis/s3-sync-action@master
