--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -246,9 +246,24 @@ jobs:
 
   deployBinaries:
     needs:
+      - test
+      - test-web-ui
       - build
+      - docs
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: binaries.linux
+          path: release/dist
+      - uses: actions/download-artifact@v2
+        with:
+          name: binaries.macos
+          path: release/dist
+      - uses: actions/download-artifact@v2
+        with:
+          name: binaries.windows
+          path: release/dist
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
@@ -257,4 +272,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.BINARY_PUBLISH_AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.BINARY_PUBLISH_AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'us-east-2'
-          SOURCE_DIR: './release/dist'
+          SOURCE_DIR: 'release/dist'
