Deploy binary on release only

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -245,6 +245,7 @@ jobs:
       - run: ./release/deploy.py
 
   deployBinaries:
+    if: github.event_name == 'release' && github.event.action == 'created'
     needs:
       - test
       - test-web-ui
