--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ exclude =
     mitmproxy/addons/termlog.py
     mitmproxy/connections.py
     mitmproxy/contentviews/base.py
+    mitmproxy/contentviews/grpc.py
     mitmproxy/controller.py
     mitmproxy/ctx.py
     mitmproxy/exceptions.py
