--- a/release/docker/Dockerfile
+++ b/release/docker/Dockerfile
@@ -4,7 +4,7 @@ ARG MITMPROXY_WHEEL
 COPY $MITMPROXY_WHEEL /wheels/
 RUN pip install wheel && pip wheel --wheel-dir /wheels /wheels/${MITMPROXY_WHEEL}
 
-FROM python:3.9-bullseye
+FROM python:3.9-slim-bullseye
 
 RUN useradd -mU mitmproxy
 RUN apt-get update \
