Add protobuf stubs

--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,7 @@ deps =
   types-requests==2.26.1
   types-cryptography==3.3.9
   types-pyOpenSSL==21.0.1
+  types-protobuf==3.19.12
 
 commands =
   mypy {posargs}
