--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ exclude = mitmproxy/contrib/*,test/mitmproxy/data/*,release/build/*
 addons = file,open,basestring,xrange,unicode,long,cmp
 
 [tool:pytest]
+asyncio_mode = auto
 testpaths = test
 addopts = --capture=no --color=yes
 
