fix vt code detection on Windows

--- a/setup.cfg
+++ b/setup.cfg
@@ -70,4 +70,5 @@ exclude =
     mitmproxy/proxy/server.py
     mitmproxy/proxy/layers/tls.py
     mitmproxy/utils/bits.py
+    mitmproxy/utils/vt_codes.py
     release/hooks
