[dns] temporarily exclude dns.py and more tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ exclude =
     mitmproxy/contentviews/base.py
     mitmproxy/contentviews/grpc.py
     mitmproxy/ctx.py
+    mitmproxy/dns.py
     mitmproxy/exceptions.py
     mitmproxy/flow.py
     mitmproxy/io/io.py
