--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ exclude =
 
 [tool:individual_coverage]
 exclude =
+    mitmproxy/addons/dnsserver.py
     mitmproxy/addons/onboarding.py
     mitmproxy/connections.py
     mitmproxy/contentviews/base.py
