--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,7 @@ exclude =
     mitmproxy/net/http/multipart.py
     mitmproxy/net/tcp.py
     mitmproxy/net/tls.py
+    mitmproxy/net/udp.py
     mitmproxy/options.py
     mitmproxy/proxy/config.py
     mitmproxy/proxy/server.py
