--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,7 @@ jobs:
       - run: tox -e py
         if: matrix.os != 'ubuntu-latest'
         # make sure that tests run without network connection
-      - name: tox -e py (without internet)
+      - name: Run tox -e py (without internet)
         run: |
           tox -e py --notest
           sudo unshare --net -- sh -c "ip link set lo up; $(which tox) -e py"
