--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,11 +87,12 @@ jobs:
       - run: pip install tox
       - run: tox -e py
         if: matrix.os != 'ubuntu-latest'
-        # make sure that tests run without network connection
       - name: Run tox -e py (without internet)
         run: |
-          tox -e py --notest
-          sudo unshare --net -- sh -c "ip link set lo up; $(which tox) -e py"
+          # install dependencies (requires internet connectivity)
+          tox -e py --notest  
+          # run tests with loopback only. We need to sudo for unshare, which means we need an absolute path for tox.
+          sudo unshare --net -- sh -c "ip link set lo up; $(which tox) -e py"  
         if: matrix.os == 'ubuntu-latest'
       - uses: codecov/codecov-action@a1ed4b322b4b38cb846afb5a0ebfa17086917d27
         # mirrored below and at https://github.com/mitmproxy/mitmproxy/settings/actions
