--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,8 @@ addons = file,open,basestring,xrange,unicode,long,cmp
 asyncio_mode = auto
 testpaths = test
 addopts = --capture=no --color=yes
+filterwarnings =
+    ignore::DeprecationWarning:tornado.*:
 
 [coverage:run]
 branch = False
