fix coverage failures
Signed-off-by: Miguel Guarniz <mi9uel9@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -73,6 +73,7 @@ exclude =
     mitmproxy/proxy/config.py
     mitmproxy/proxy/server.py
     mitmproxy/proxy/layers/tls.py
+    mitmproxy/proxy/layers/dtls.py
     mitmproxy/utils/bits.py
     mitmproxy/utils/vt_codes.py
     mitmproxy/utils/pyinstaller
