fix individual_coverage on Windows

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ exclude_lines =
     if typing.TYPE_CHECKING:
     if TYPE_CHECKING:
     @overload
+    @abstractmethod
 
 [mypy]
 ignore_missing_imports = True
