--- a/codecov.yml
+++ b/codecov.yml
@@ -7,7 +7,8 @@ coverage:
         target: auto
         threshold: 0.1%
         paths:
-          - "!web/"
+          - "mitmproxy/"
+          - "examples/addons/"
       web:
         target: auto
         threshold: 0.1%
