Changed action based on ubuntu 18.04 due to https://bit.ly/3QOw87Z

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,7 +112,7 @@ jobs:
             platform: macos
           - image: windows-2019
             platform: windows
-          - image: ubuntu-18.04  # Old Ubuntu version for old glibc
+          - image: ubuntu-latest  # Used to be Ubuntu 18.04, but this is being depriocated by github. 
             platform: linux
     runs-on: ${{ matrix.image }}
     env:
