move WireGuardDatagramTransport into dedicated module
this allows us to exclude it from individual coverage, which makes no sense.
Also improve type checking to make sure that it's a full replacement.

--- a/setup.cfg
+++ b/setup.cfg
@@ -69,6 +69,7 @@ exclude =
     mitmproxy/net/http/message.py
     mitmproxy/net/http/multipart.py
     mitmproxy/net/tls.py
+    mitmproxy/net/udp_wireguard.py
     mitmproxy/options.py
     mitmproxy/proxy/config.py
     mitmproxy/proxy/server.py
