mypy: install _all_ dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,7 @@ deps =
   types-requests==2.28.10
   types-cryptography==3.3.23
   types-pyOpenSSL==22.0.10
+  -e .[dev]
 
 commands =
   mypy {posargs}
