--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [ push, pull_request ]
+on: [ push, pull_request, workflow_dispatch ]
 
 permissions:
   contents: read
@@ -152,7 +152,7 @@ jobs:
       - run: git rev-parse --abbrev-ref HEAD
       - uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version-file: .github/node-version.txt
       - name: Cache Node.js modules
         uses: actions/cache@v3
         with:
@@ -190,6 +190,16 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: docs
+          path: docs/public
+      # For releases, also build the archive version of the docs.
+      - if: startsWith(github.ref, 'refs/tags/')
+        run: ./docs/build.py
+        env:
+          DOCS_ARCHIVE: true
+      - if: startsWith(github.ref, 'refs/tags/')
+        uses: actions/upload-artifact@v3
+        with:
+          name: docs-archive
           path: docs/public
 
   # Separate from everything else because slow.
@@ -263,6 +273,11 @@ jobs:
         with:
           name: docs
           path: docs/public
+      - if: startsWith(github.ref, 'refs/tags/')
+        uses: actions/download-artifact@v3
+        with:
+          name: docs-archive
+          path: docs/archive
       - uses: actions/download-artifact@v3
         with:
           name: binaries.windows
