--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,13 +70,15 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            py: "3.10"
+            py: "3.11"
           - os: windows-latest
-            py: "3.10"
+            py: "3.11"
           - os: macos-latest
+            py: "3.11"
+          - os: ubuntu-latest
             py: "3.10"
           - os: ubuntu-latest
-            py: 3.9
+            py: "3.9"
     runs-on: ${{ matrix.os }}
     steps:
       - run: printenv
